--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "turnstyle",
-  "version": "0.1.5",
+  "engines": {
+    "node": "16.x"
+  },
+  "version": "3.0.0",
   "private": true,
   "description": "GitHub Action for limiting one workflow to complete at a time",
   "main": "lib/main.js",
