--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "author": "softprops",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
+    "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "@octokit/plugin-throttling": "^3.3.4",
     "@octokit/rest": "^16.43.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
     "@types/jest": "^26.0.19",
     "@types/node": "^18.16.0",
     "@vercel/ncc": "^0.26.1",
