--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@octokit/plugin-throttling": "^3.3.4",
-    "@octokit/rest": "^16.43.2"
+    "@octokit/plugin-throttling": "^4.3.2",
+    "@octokit/rest": "^19.0.5",
+    "@octokit/types": "^9.1.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.21.4",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^18.16.0",
-    "@vercel/ncc": "^0.26.1",
-    "husky": "^4.3.6",
-    "jest": "^29.5.0",
-    "jest-circus": "^26.6.3",
-    "lint-staged": "^10.5.3",
-    "prettier": "2.2.1",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "@types/jest": "^29.2.1",
+    "@types/node": "^18.11.9",
+    "@vercel/ncc": "^0.34.0",
+    "husky": "^8.0.1",
+    "jest": "^29.2.2",
+    "jest-circus": "^29.2.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "lint-staged": {
     "{__tests__,src}/**/*.ts": [
